[package]
name = "netdox-plugin-rs"
version = "1.0.0"
edition = "2021"
description = "Collection of functions that are useful when writing a netdox plugin in Rust."
authors = ["Linus Kirkwood <linuskirkwood@gmail.com>"]
license = "LGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/lkirkwood/netdox-plugin-rs"

[dependencies]
redis = { version = "0.27.6", features = ["aio", "async-std-comp"] }
thiserror = "2.0.9"
serde = { version = "1.0.217", features = ["derive"] }
